fix overflow issue in home page contact form

--- a/resources/assets/sass/front/partials/_socialicons.scss
+++ b/resources/assets/sass/front/partials/_socialicons.scss
@@ -7,6 +7,8 @@
     width: 40px;
     margin: 0 8px;
 
+    @include respond-to(phone) {width: 30px;}
+
     &:hover {
       .colour-in {
         fill: $brand_green;
